untitled/src/objects/Application__c.object
<CustomObject>
    <description>Application Object to list all the Applications</description>
    <fields>
        <fullName>ActiveApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acitve Applications</description>
        <label>ActiveApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to Application</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IndividualApplicant__c</fullName>
        <description>Application (Child Object) with a Master - Detail relationship to IndividualApplicant (Parent Object)</description>
        <label>IndividualApplicant</label>
        <referenceTo>IndividualApplicant__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JobPosting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applications(Child Object) with a Lookup to JobPosting ( Parent Object)</description>
        <label>JobPosting</label>
        <referenceTo>JobPostings__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>